[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plato-edge"
version = "0.1.0"
description = "Edge-optimized Cocapn fleet packages for ARM64 devices with limited resources"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Cocapn Fleet Team"},
]
keywords = ["edge", "embedded", "jetson", "arm64", "iot", "lightweight"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Networking",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/SuperInstance/plato-edge"
Repository = "https://github.com/SuperInstance/plato-edge"
Issues = "https://github.com/SuperInstance/plato-edge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/plato_edge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
